--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ php:
     - 5.5
 
 env:
-    global:
-         - WP_CLI_BIN_DIR=/tmp/wp-cli-phar
-         - WP_CLI_CONFIG_PATH=/tmp/wp-cli-phar/config.yml
+    - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=1
 
 before_script:
-    - bash bin/install-package-tests.sh
+    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
-script: ./vendor/bin/behat
+script: phpunit
