--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+    - composer install
 
 script: phpunit
