--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php" : ">=5.3.2",
-        "goodby/csv": "*"
+        "goodby/csv": "*",
+        "megumi/wp-post-helper": "*"
     },
     "autoload": {
         "psr-0": {"ACSV": "lib"}
