--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php" : ">=5.3.2",
         "goodby/csv": "*",
-        "megumi/wp-post-helper": "dev-master"
+        "megumi/wp-post-helper": "*"
     },
     "autoload": {
         "psr-0": {"ACSV": "lib"}
